Refactor todos controller to return json errors